[package]
name = "brotli-wasm"
version = "1.0.0"
description = "A compressor and decompressor for Brotli that actually works, for node & browsers"
repository = "https://github.com/httptoolkit/brotli-wasm"
authors = ["Tim Perry <tim@httptoolkit.tech>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc", "console_error_panic_hook"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2"
brotli = "3.3"
wee_alloc = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }