[package]
name = "brotli-wasm"
version = "1.0.0"
description = "A compressor and decompressor for Brotli that actually works, for node & browsers"
repository = "https://github.com/httptoolkit/brotli-wasm"
authors = ["Tim Perry <tim@httptoolkit.tech>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = { version = "0.2.1", features = ["serde-serialize"] }
brotli = "5.0"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
